# SecureFlow

./: .coverage  .gitignore  .secureflow.example.yaml  AZURE_PIPELINES_ENHANCEMENT_SUMMARY.md  AZURE_PIPELINE_DUPLICATION_ANALYSIS.md  COMPREHENSIVE_ANALYSIS.md  COMPREHENSIVE_CODE_ANALYSIS.md  DOCS_ANALYSIS_REPORT.md  DOCUMENTATION_INDEX.md  ENHANCED_SCANNING_SOLUTION.md  GITHUB_ACTIONS_STRUCTURE.md  GITHUB_REPO_INSTALL_UPDATE.md  JAVA_MAVEN_WORKFLOW_FIX.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_STRUCTURE_ANALYSIS.md  PROJECT_SUMMARY.md  README.md  SUBMISSION.md  SUPPORTED_APPLICATIONS.md  USAGE_GUIDE.md  VIDEO_SCRIPT.md  VIDEO_SETUP_GUIDE.md  WORKFLOW_VALIDATION_SUMMARY.md  WORKSPACE_ANALYSIS_REPORT.md  coverage.xml  pyproject.toml  validate_workflows.py
.github/: copilot-instructions.md
.github/actions/: README.md
.github/actions/secureflow-scan/: action.yml  main.py
.github/actions/setup-secureflow/: action.yml
.github/workflows/: security-basic.yml  security-compatible.yml  security-comprehensive.yml
azure-pipelines/: README.md  secureflow-basic.yml  secureflow-comprehensive.yml  secureflow-container.yml  secureflow-enhanced.yml  secureflow-enterprise-azure.yml  secureflow-java-maven.yml  secureflow-monorepo.yml  secureflow-nodejs.yml  secureflow-python-web.yml
azure-pipelines/steps/: setup-secureflow.yml
docs/: COMPATIBILITY_GUIDE.md  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  USAGE_GUIDE.md
docs/analysis/: ACTION_ANALYSIS_COMPLETE.md  COMPATIBILITY_ANALYSIS.md  COMPREHENSIVE_ANALYSIS.md
docs/summaries/: BACKWARD_COMPATIBILITY_SUMMARY.md  FINAL_PROJECT_STRUCTURE.md  MATRIX_FIX_SUMMARY.md  PROJECT_SUMMARY.md
docs/validation/: CRITICAL_FIX_APPLIED.md  FINAL_VALIDATION_STATUS.md  JSON_FIX_COMPLETE.md
examples/: README.md  azure_integration.py  basic_usage.py  custom_plugin.py
examples/config_examples/: README.md  azure-devops-config.yml  basic-config.yml
github-actions-templates/: README.md  basic-security.yml  container-security.yml  java-maven-security-actions.yml  java-maven-security-future.yml  java-maven-security.yml  nodejs-security.yml  python-security.yml
src/secureflow_core/: __init__.py  __main__.py  azure.py  cli.py  compliance.py  config.py  core.py  plugins.py  report.py  scanner.py  templates.py  utils.py
src/secureflow_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_basic.py  test_cli.py  test_core.py
validation/scripts/: analyze_actions.py  analyze_duplicates.ps1  comprehensive_analysis.py  run_all_validations.py  simple_analysis.py  validate_azure_pipelines.ps1  validate_azure_pipelines_simple.ps1  validate_templates.ps1  validate_templates.sh  validate_templates_clean.ps1  validate_workflows.py  verify_structure.py
validation/tests/: test_echo_json.py  test_json_generation.py  test_matrix_generation.ps1  test_matrix_generation.sh  test_matrix_logic.py
